[project]
name = "streamlit-webrtc-ice-config-experiment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.43.2",
    "streamlit-webrtc==0.62.1",
    "twilio>=9.5.0",
    "aioice==0.10.0",
]

[tool.uv.sources]
streamlit-webrtc = { url = "https://c88cb37e.streamlit-webrtc-hosting.pages.dev/streamlit_webrtc-0.62.2.dev5+gcd0ebc1-py3-none-any.whl" }
